fix wrod-wrap

--- a/src/style.css
+++ b/src/style.css
@@ -3,33 +3,33 @@
 /* start here */
 
 .title {
-  letter-spacing: -1px;
   margin-bottom: 5px;
 }
 
 .item {
   &__top-element {
 
-    @media (min-width: 640px) {
+    @media (min-width: 768px) {
       float: left;
     }
   }
 
   &__desc {
 
-    @media (min-width: 640px) {
+    @media (min-width: 768px) {
       margin-left: 100px;
       text-align: left;
     }
   }
 
   &__title {
-    font-weight: var(--ui-hero-title-font-weight);
     margin-top: 10px;
 
-    @media (min-width: 640px) {
+    @media (min-width: 768px) {
+      margin-left: 100px;
       text-align: left;
-      font-size: var(--ui-subheading-size);
+      font-weight: 700;
+      font-size: calc(var(--ui-heading-size) * 0.8572);
     }
   }
 }
